# example_rocket_api_start

./: Cargo.toml  Rocket.toml  test.http
src/: main.rs
templates/: about.html.tera  base.html.tera
